--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body{
     height: 100%;
     background-color: #111;
+
 }
 
 h1{
@@ -99,4 +100,50 @@ background: none;
 outline: none;
 color: red;
 border: none;
+}
+
+/* calculate style  */
+
+.calc{
+    width: 290px;
+    height: 410px;
+    padding: 10px 20px;
+    border-radius: 4px;
+    border: 5px solid white;
+    position: relative;
+    top: 50%;
+    left: 50%;
+    transform: translate(100% , 30%);
+
+}
+.screen{
+    width: 100%;
+    height: 50px;
+    padding: 20px;
+    margin-bottom: 20px;
+    margin-top: 10px;
+    font-size: 20px;
+    background: none;
+    border: 5px solid white;
+    border-radius: 4px;
+    box-sizing: border-box;
+    color: lime;
+    transition: .5s;
+}
+.bn{
+    width: 55px;
+    height: 55px;
+    margin: 2px;
+    padding: 9px;
+    background: none;
+    border-radius: 4px;
+    border: 5px solid white;
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.bn:hover{
+transform: scale(1.08);
+font-size: 25px;
 }
